# casi-app

./: .env.example  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  ESCROW_PLAN.md  HANDOFF.md  INVESTOR_BRIEF.md  LICENSE  PLAN.md  README.md  SECURITY.md  SUMMARY.md  capped-mainnet-plan.md  casi-final-v9.html  casi-redesign-v7.html  escrow-state.md  grant-answers.md  next.config.ts  package-lock.json  package.json  page.tsx  pro-tier-plan.md  pssw  skills-lock.json  stakecall-brainstorm.md  tsconfig.json  vercel.json
.agents/: brand-context.md  brand-messaging.md  brand-positioning.md  brand-voice.md
.github/workflows/: ci.yml  stripe-janitor.yml
Casi/design_handoff_casi_redesign/: README.md
bonk-ui-source/components/: wallet-connect.tsx
design-explorations/handoff/: README.md  page.tsx
docs/: P0_SETUP.md  growth-referral-plan.md  helius_webhooks.txt  overlay-qa-checklist.md  solana_identity.txt  solitaire-v2-plan.md  streamflow_sdk.txt
mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
programs/casi-escrow/: Cargo.toml  DEPLOY.md  FEE_MODEL.md  PRIMITIVE.md  README.md
programs/casi-escrow/src/: lib.rs
public/: llms.txt  words.json
public/game/: index.html
public/solitaire/: index.html
scripts/: init-escrow-config.mjs  setup-devnet.sh  sync-program-id.mjs
src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
src/components/: AbuseReportForm.tsx  CasiLogo.tsx  ChatPanel.tsx  ClientErrorReporter.tsx  CookieNotice.tsx  CopyRow.tsx  DevBanner.tsx  EarningsBar.tsx  FlashPanel.tsx  Header.tsx  MobileWalletPicker.tsx  MonoNumber.tsx  Nav.tsx  Providers.tsx  SearchDropdown.tsx  ShapeButtonGroup.tsx  SignOutButton.tsx  SiteFooter.tsx  SkinPicker.tsx  SkinProvider.tsx  SlotCard.tsx  SlotMedia.tsx  SolanaLogo.tsx  SolanaProvider.tsx  (+5 more)
supabase/: config.toml
tests/: casi-escrow.ts  tsconfig.json
(+322 files in other folders)
